Add hash function benchmarks.